# voidwire

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  conftest.py  design_doc.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
api/: pyproject.toml
api/src/api/: __init__.py  dependencies.py  main.py
api/src/api/middleware/: auth.py  csrf.py  rate_limit.py  setup_guard.py
api/src/api/routers/: admin_accounts.py  admin_analytics.py  admin_audit.py  admin_auth.py  admin_backup.py  admin_content.py  admin_dictionary.py  admin_events.py  admin_keywords.py  admin_llm.py  admin_pipeline.py  admin_readings.py  admin_settings.py  admin_signals.py  admin_site.py  admin_sources.py  admin_templates.py  admin_threads.py  health.py  public.py  setup_wizard.py  stripe_webhook.py  user_auth.py  user_profile.py  user_readings.py  user_subscription.py
api/src/api/scripts/: __init__.py  recalculate_natal_charts.py
api/src/api/services/: async_job_service.py  auth_lockout.py  backup_service.py  billing_reconciliation.py  birth_timezone.py  content_pages.py  discount_code_service.py  email_service.py  email_template_service.py  governance.py  llm_slots.py  maintenance.py  oauth_config.py  personal_reading_service.py  reading_service.py  site_config.py  stripe_config.py  stripe_service.py  subscription_service.py  template_defaults.py  weather_service.py
api/tests/: conftest.py  test_admin_api.py  test_admin_site_email_api.py  test_auth_api.py  test_birth_timezone_service.py  test_csrf_middleware.py  test_email_service.py  test_public_api.py  test_rate_limit_middleware.py  test_setup_wizard_api.py  test_stripe_webhook_api.py  test_user_async_jobs_api.py  test_user_auth_cookie_api.py  test_user_features_api.py  test_user_governance_api.py
ephemeris/: pyproject.toml
ephemeris/src/ephemeris/: __init__.py  aspects.py  bodies.py  calculator.py  lunar.py  meanings.py  natal.py
ephemeris/tests/: test_aspects.py  test_calculator.py  test_lunar.py  test_natal.py
pipeline/: pyproject.toml
pipeline/src/pipeline/: __init__.py  __main__.py  orchestrator.py
pipeline/src/pipeline/news/: __init__.py  api_adapters.py  deduplication.py  filters.py  rss_fetcher.py
pipeline/src/pipeline/prompts/: __init__.py  distillation.py  personal_reading.py  synthesis_plan.py  synthesis_prose.py
pipeline/src/pipeline/stages/: distillation_stage.py  embedding_stage.py  ephemeris_stage.py  free_reading_batch_stage.py  ingestion_stage.py  (+5 more)
pipeline/tests/: test_distillation_stage.py  test_orchestrator.py  test_publish_stage.py  test_scheduler.py  test_synthesis_templates.py
shared/: pyproject.toml
shared/src/voidwire/: __init__.py  config.py  database.py
(+147 files in other folders)
