[project]
name = "voidwire-api"
version = "0.1.0"
description = "FastAPI application for Voidwire"
requires-python = ">=3.12"
dependencies = [
    "voidwire-shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-jose[cryptography]>=3.3",
    "pyotp>=2.9",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "boto3>=1.34",
    "stripe>=8.0",
    "google-auth>=2.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
