[project]
name = "voidwire-ephemeris"
version = "0.1.0"
description = "Swiss Ephemeris calculator for Voidwire"
requires-python = ">=3.12"
dependencies = [
    "pyswisseph>=2.10",
    "voidwire-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ephemeris"]
