[project]
name = "voidwire-pipeline"
version = "0.1.0"
description = "Daily pipeline for Voidwire reading generation"
requires-python = ">=3.12"
dependencies = [
    "voidwire-shared",
    "voidwire-ephemeris",
    "feedparser>=6.0",
    "trafilatura>=1.6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]
